--- a/Acidentes_Aereos_Ocorridos_no_Brasil_de_2010_a_2019.ipynb
+++ b/Acidentes_Aereos_Ocorridos_no_Brasil_de_2010_a_2019.ipynb
@@ -924,7 +924,7 @@
         "id": "cCE_3IWDofzM",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 370
+          "height": 455
         },
         "outputId": "9add293d-c30e-4f54-d38a-ff06cae41f89"
       },
@@ -970,7 +970,7 @@
         "id": "H-GDw7UFhojS"
       },
       "source": [
-        "Nota-se que a cidade com maior quantidade de ocorrências nesse período foi **Rio de Janeiro** com **293**, visto que, além da alta demanda de voos comerciais e privados, a geografia do relevo não é menos favorável.\n",
+        "Nota-se que a cidade com maior quantidade de ocorrências nesse período foi **Rio de Janeiro** com **293**, visto que além da alta demanda de voos comerciais e privados,a geografia do relevo não é menos favorável.\n",
         "\n",
         "Dos **5568** municípios no Brasil, **1042** tiveram pelo menos **1** ocorrência aeronáutica e isso corresponde a **18,71%** das cidades brasileiras\n",
         "\n",
