--- a/Acidentes_Aereos_Ocorridos_no_Brasil_de_2010_a_2019.ipynb
+++ b/Acidentes_Aereos_Ocorridos_no_Brasil_de_2010_a_2019.ipynb
@@ -1801,7 +1801,7 @@
       "source": [
         "Nota-se que a maior parte das ocorrências (**1827**) **não** gerou dano à aeronave, visto que, o maior número de ocorrências são incidentes.\n",
         "\n",
-        "A menor parte das ocorrências (42) no período gerou **danos intederminados**\n",
+        "A menor parte das ocorrências (42) no período gerou **danos indeterminados**\n",
         "\n",
         "A **média** de ocorrências **sem danos** foi de **182,70** por ano.\n",
         "\n",
