--- a/Acidentes_Aereos_Ocorridos_no_Brasil_de_2010_a_2019.ipynb
+++ b/Acidentes_Aereos_Ocorridos_no_Brasil_de_2010_a_2019.ipynb
@@ -1287,7 +1287,7 @@
         "id": "cBcTT_Z7DPKo"
       },
       "source": [
-        "Nota-se que o tipo de motor mais frequente nesse período foi a **PISTAO**, que representa **56,31%** do total de ocorrências, visto que, há um maior volume de motores movidos a pistão em atividade.\n",
+        "Nota-se que o tipo de motor mais frequente nesse período foi a **PISTÃO**, que representa **56,31%** do total de ocorrências, visto que, há um maior volume de motores movidos a pistão em atividade.\n",
         "\n",
         "O tipo de motor menos frequente foi o **Sem tração**.\n",
         "\n",
