--- a/Acidentes_Aereos_Ocorridos_no_Brasil_de_2010_a_2019.ipynb
+++ b/Acidentes_Aereos_Ocorridos_no_Brasil_de_2010_a_2019.ipynb
@@ -2781,8 +2781,8 @@
       },
       "source": [
         "O principal objetivo desse trabalho é realizar o levantamento estatístico de acidentes aéreos ocorridos em território brasileiro, entre os anos de 2010 a 2019, buscando apresentar de forma gráfica informações que envolvem a aviação nacional.\n",
-        "O conteúdo deste documento levou em consideração os dados, disponibilizados na plataforma Github, as principais ocorrências abordadas serão: Região, tipo de aeronave, principais ocorrências, ocorrências por fabricante entre outros.\n",
-        " Os principais resultados da analise foram: \n",
+        "O conteúdo deste documento levou em consideração os dados, disponibilizados na plataforma Github, as principais ocorrências abordadas serão: região, tipo de aeronave, principais ocorrências, ocorrências por fabricante entre outros.\n",
+        " Os principais resultados da análise foram: \n",
         "As aeronaves mais afetadas são os aviões com 4.213 mil acidentes destacando-se as aeronaves com até 6 acentos, monomotores com fabricação de 2008. A principal falha desses aviões são os pistões do motor que representam um total de 56,31 % dos problemas da aeronave, já a fabricante Cessna Aircraft foi a responsável tem um total de 800 casos ou 23,51% do total.\n",
         "Os acidentes em sua grande maioria são leves correspondendo a 55,1% do total, com o mês de janeiro sendo o mês com mais incidentes no ano, já o Sudeste representa a região que mais concentra ocorrências em números absolutos sendo São Paulo o estado mais afetado.\n",
         "\n",
