--- a/Acidentes_Aereos_Ocorridos_no_Brasil_de_2010_a_2019.ipynb
+++ b/Acidentes_Aereos_Ocorridos_no_Brasil_de_2010_a_2019.ipynb
@@ -2780,7 +2780,7 @@
         "id": "7MsJjeYedlUc"
       },
       "source": [
-        "O principal objetivo desse trabalho é realizar o levantamento estatístico de acidentes aéreos ocorridos em território brasileiro, entre os anos de 2010 a 2019, buscando apresentar de forma gráfica informações que envolvem a aviação nacional.\n",
+        "O principal objetivo desse trabalho é realizar o levantamento estatístico de acidentes aéreos ocorridos em território brasileiro, entre os anos de 2010 a 2019, buscando apresentar, de forma gráfica, informações que envolvem a aviação nacional.\n",
         "\n",
         "O conteúdo deste documento levou em consideração os dados, disponibilizados na plataforma Github.\n",
         "\n",
