--- a/Acidentes_Aereos_Ocorridos_no_Brasil_de_2010_a_2019.ipynb
+++ b/Acidentes_Aereos_Ocorridos_no_Brasil_de_2010_a_2019.ipynb
@@ -2782,9 +2782,9 @@
       "source": [
         "O principal objetivo desse trabalho é realizar o levantamento estatístico de acidentes aéreos ocorridos em território brasileiro, entre os anos de 2010 a 2019, buscando apresentar, de forma gráfica, informações que envolvem a aviação nacional.\n",
         "\n",
-        "O conteúdo deste documento levou em consideração os dados, disponibilizados na plataforma Github.\n",
+        "O conteúdo deste documento levou em consideração os dados disponibilizados na plataforma Github.\n",
         "\n",
-        "As principais ocorrências abordadas serão: região, tipo de aeronave, principais ocorrências, ocorrências por fabricante entre outros.\n",
+        "As principais ocorrências abordadas serão: região, tipo de aeronave, principais ocorrências e ocorrências por fabricante entre outros.\n",
         "\n",
         "Os principais resultados da análise foram: \n",
         "\n",
