--- a/Acidentes_Aereos_Ocorridos_no_Brasil_de_2010_a_2019.ipynb
+++ b/Acidentes_Aereos_Ocorridos_no_Brasil_de_2010_a_2019.ipynb
@@ -2823,14 +2823,14 @@
       },
       "source": [
         "\n",
-        "O presente trabalho buscou apresentar, de forma ilustrativa, o panorama de informações que envolvem a aviação brasileira desse tipo de aeronave, Entre os anos de 2010 a 2019. É de fundamental importância compreender que o conteúdo deste documento procurou ater-se aos dados coletados e produzidos pelo CENIPA (dados primários), abstendo-se, na medida do possível, de qualquer tipo de análise ou dados de terceiros. \n",
+        "O presente trabalho buscou apresentar, de forma ilustrativa, o panorama de informações que envolvem a aviação brasileira desse tipo de aeronave entre os anos de 2010 a 2019. É de fundamental importância compreender que o conteúdo deste documento procurou ater-se aos dados coletados e produzidos pelo CENIPA (dados primários), abstendo-se, na medida do possível, de qualquer tipo de análise ou dados de terceiros. \n",
         "\n",
         "O principal objetivo desta publicação é o compartilhamento de informações detalhadas sobre ocorrências com aeronaves de asa fixa. Este é um material essencial para compor estudos, análises ou pesquisas com vistas à prevenção de acidentes aeronáuticos. \n",
         "\n",
-        "Analisando os dados coletados observa-se que os incidentes são de números e aeronaves diversas sem descriminação entre o ocorrido. No tratamento dos dados,nota-se que a maioria dos casos são de fatores externos e que a maioria dos casos tiveram poucos danos a aeronave ou quase nenhum. \n",
-        "Dentro dessa análise, percebemos que as investigações realizados sobre estas ocorrências teve finalidade, sendo o maior número ocorrências registradas pelo CENIPA no ano de 2013 e o menor em 2016.\n",
+        "Analisando os dados coletados, observa-se que os incidentes são de números e aeronaves diversas sem descriminação entre o ocorrido. No tratamento dos dados, nota-se que a maioria dos casos são de fatores externos e que a maioria dos casos tiveram poucos danos a aeronave ou quase nenhum. \n",
+        "Dentro dessa análise, percebe-se que as investigações realizadas sobre estas ocorrências teve finalidade, sendo o maior número ocorrências registradas pelo CENIPA no ano de 2013 e o menor em 2016.\n",
         "\n",
-        "Quando se trata de incidentes aéreos, todos os envolvidos são necessários e mobilizados para o apoio e investigação, seguindo assim os protocolos e regras estabelecidas. Diante do dados, é possível afirmar que os voos, de forma geral, são seguros.  \n",
+        "Quando se trata de incidentes aeronáuticos, todos os envolvidos são necessários e mobilizados para o apoio e investigação, seguindo assim os protocolos e regras estabelecidas. Diante do dados, é possível afirmar que os voos, de forma geral, são seguros.  \n",
         "\n",
         "Por fim conseguimos estabelecer algumas características nos incidentes, sendo eles: os fatores que causarão a fatalidade, a média de incidentes por ano, cidade, horários, tipos de aeronaves e o nível de dano causado. A ocorrência que mais se apresenta é a falha do motor durante o voo e a que menos notamos na analise foi a colisão com objetos durante a decolagem e o pouso. Conclui-se que o numero de incidentes são menores, isso comparado ao número de aeronaves que decolam todos os dias durante o ano, porém não é nulo os ocorridos. \n",
         "\n"
