--- a/Acidentes_Aereos_Ocorridos_no_Brasil_de_2010_a_2019.ipynb
+++ b/Acidentes_Aereos_Ocorridos_no_Brasil_de_2010_a_2019.ipynb
@@ -2832,7 +2832,7 @@
         "\n",
         "Quando se trata de incidentes aeronáuticos, todos os envolvidos são necessários e mobilizados para o apoio e investigação, seguindo assim os protocolos e regras estabelecidas. Diante do dados, é possível afirmar que os voos, de forma geral, são seguros.  \n",
         "\n",
-        "Por fim conseguimos estabelecer algumas características nos incidentes, sendo eles: os fatores que causarão a fatalidade, a média de incidentes por ano, cidade, horários, tipos de aeronaves e o nível de dano causado. A ocorrência que mais se apresenta é a falha do motor durante o voo e a que menos notamos na analise foi a colisão com objetos durante a decolagem e o pouso. Conclui-se que o numero de incidentes são menores, isso comparado ao número de aeronaves que decolam todos os dias durante o ano, porém não é nulo os ocorridos. \n",
+        "Por fim conseguimos estabelecer algumas características nos incidentes, sendo eles: os fatores que causarão a fatalidade, a média de incidentes por ano, cidade, horários, tipos de aeronaves e o nível de dano causado. A ocorrência que mais se apresenta é a falha do motor durante o voo e a que menos notamos na analise foi a colisão com objetos durante a decolagem e o pouso. Conclui-se que o número de incidentes são menores, isso comparado ao número de aeronaves que decolam todos os dias durante o ano, porém não é nulo os ocorridos. \n",
         "\n"
       ]
     },
