--- a/Acidentes_Aereos_Ocorridos_no_Brasil_de_2010_a_2019.ipynb
+++ b/Acidentes_Aereos_Ocorridos_no_Brasil_de_2010_a_2019.ipynb
@@ -2828,7 +2828,7 @@
         "O principal objetivo desta publicação é o compartilhamento de informações detalhadas sobre ocorrências com aeronaves de asa fixa. Este é um material essencial para compor estudos, análises ou pesquisas com vistas à prevenção de acidentes aeronáuticos. \n",
         "\n",
         "Analisando os dados coletados, observa-se que os incidentes são de números e aeronaves diversas sem descriminação entre o ocorrido. No tratamento dos dados, nota-se que a maioria dos casos são de fatores externos e que a maioria dos casos tiveram poucos danos a aeronave ou quase nenhum. \n",
-        "Dentro dessa análise, percebe-se que as investigações realizadas sobre estas ocorrências teve finalidade, sendo o maior número ocorrências registradas pelo CENIPA no ano de 2013 e o menor em 2016.\n",
+        "Dentro dessa análise, percebe-se que as investigações realizadas sobre estas ocorrências teve finalidade, sendo o maior número de ocorrências registradas pelo CENIPA no ano de 2013 e o menor em 2016.\n",
         "\n",
         "Quando se trata de incidentes aeronáuticos, todos os envolvidos são necessários e mobilizados para o apoio e investigação, seguindo assim os protocolos e regras estabelecidas. Diante do dados, é possível afirmar que os voos, de forma geral, são seguros.  \n",
         "\n",
